<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_show_expenses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/text_review_expenses" />

    <Button
        android:id="@+id/button_show_incomes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/text_review_incomes" />

    <Button
        android:id="@+id/button_bar_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_bar_chart" />
</LinearLayout>